# mediapipe

./: README.md
examples/face_landmarker/android/: build.gradle
examples/face_landmarker/android/app/: build.gradle
examples/face_landmarker/android/app/src/main/: AndroidManifest.xml
examples/face_landmarker/android/app/src/main/java/com/google/mediapipe/examples/facelandmarker/: FaceLandmarkerHelper.kt  MainActivity.kt  MyGLRenderer.kt  OverlayView.kt
examples/face_landmarker/android/app/src/main/java/com/google/mediapipe/examples/facelandmarker/fragment/: FaceBlendshapesResultAdapter.kt
examples/face_landmarker/android/app/src/main/java/com/google/mediapipe/examples/facelandmarker/widget/: GLTextureView.java
examples/face_landmarker/android/app/src/main/java/com/google/mediapipe/examples/facelandmarker/widget/egl/: DefaultEGLConfigChooser.java  EGLManager.java  SurfaceColorSpec.java
examples/face_landmarker/android/app/src/main/res/layout/: activity_main.xml  fragment_camera.xml
examples/face_landmarker/android/cartoon_head/: CMakeLists.txt
examples/face_landmarker/android/cartoon_head/examples/common/: trackball.cc  trackball.h
examples/face_landmarker/android/cartoon_head/examples/gl3demo/: CMakeLists.txt
examples/face_landmarker/android/cartoon_head/examples/gltfutil/: main.cc
examples/face_landmarker/android/cartoon_head/examples/glview/: CMakeLists.txt  glview.cc  glview.h
examples/face_landmarker/android/gradle/wrapper/: gradle-wrapper.properties
examples/face_landmarker/android/tinygltf/: README.md  tiny_gltf.h
examples/face_landmarker/android/tinygltf/examples/gl3demo/: gl3demo.cpp
examples/face_landmarker/android/tinygltf/examples/glview/: CMakeLists.txt  README.md  glview.cc
